# SOFTX_2020_238

./: .gitignore  .gitlab-ci.Dockerfile.e7  .gitlab-ci.Dockerfile.e7-testing  .gitlab-ci.yml  .gitmodules  00init.sh  Dockerfile  Dockerfile.stretch  HACKING  INSTALL  INSTALLCentOSLDG  INSTALLDebianLDG  INSTALLMacOSX  Makefile.am  README.md  TIMELINE  TODO  TODO.md  acinclude.m4  configure.ac
gst/audiodelay/: Makefile.am  audiodelay.c  audiodelay.h
gst/cairovis/: Makefile.am  cairovis.c  cairovis_base.c  cairovis_base.h  cairovis_histogram.c  cairovis_histogram.h  cairovis_lineseries.c  cairovis_waterfall.c  cairovis_waterfall.h  colormap.c  colormap.h  colormap_data.c  gencolormap.py
gst/framecpp/: Makefile.am  framecpp_channeldemux.cc  framecpp_channeldemux.h
gst/lal/: Makefile.am  gstadder.c  gstadder.h  gstlal.c  gstlal_audioundersample.c  gstlal_audioundersample.h  gstlal_autochisq.c  gstlal_autochisq.h  gstlal_blcbc_triggergen.c  gstlal_blcbc_triggergen.h  gstlal_coinc.c  gstlal_delay.c  gstlal_delay.h  gstlal_drop.c  gstlal_drop.h  gstlal_firbank.c  gstlal_firbank.h  gstlal_firbank2.c  gstlal_firbank2.h  gstlal_framesink.c  gstlal_framesink.h  gstlal_framesrc.c  gstlal_framesrc.h  gstlal_gap_trigger_veto.c  gstlal_gate.c  gstlal_gate.h  gstlal_iirbank.c  gstlal_iirbank.h  gstlal_itac.c  gstlal_itac.h  gstlal_matrixmixer.c  gstlal_matrixmixer.h  gstlal_mean.c  gstlal_mean.h  gstlal_multiplier.c  gstlal_multiplier.h  gstlal_ndssrc.c  gstlal_ndssrc.h  gstlal_nofakedisconts.c  gstlal_nxydump.c  (+29 more)
gst/multirate/: Makefile.am  multiratefirdecim.c  multiratefirdecim.h  multiratefirinterp.c  multiratefirinterp.h
gst/nds/: Makefile.am  ndssrc.c  ndssrc.h
gst/progressreport2/: Makefile.am  progressreport.c  progressreport.h
gst/python/: Makefile.am  lal_checktimestamps.py  lal_coincselector.py  lal_fakeadvligosrc.py  lal_fakeligosrc.py  lal_faketriggersrc.py  lal_gracedbsink.py  lal_ligolwtriggersrc.py  lal_nongap_duty_cycle.py  lal_onlinehoftsrc.py  lal_skymaprenderer.py  lal_timeseriesplotter.py
gst/unary/: Makefile.am  unary.c  unary_abs.c  unary_base.c  unary_base.h  unary_exp.c  unary_ln.c  unary_log.c  unary_log10.c  unary_pow.c
gstlal/: .gitignore  00init.sh  INSTALL  INSTALL.SL6  Makefile.am  configure.ac  gstlal.spec.in
gstlal-burst/: .gitignore  Makefile.am  configure.ac  gstlal-burst.spec.in
gstlal-burst/debian/: Makefile.am  changelog  control.in  gstlal-burst.install  rules
gstlal-burst/gnuscripts/: ax_python_glue.m4
gstlal-burst/lib/: Makefile.am  gstlal-burst.pc.in  gstlal_snglburst.c  gstlal_snglburst.h  gstlal_sngltrigger.c  gstlal_sngltrigger.h
gstlal-burst/python/: Makefile.am  snglburstrowtype.h  snglbursttable.c  snglbursttable.py  streamburca.py
gstlal-calibration/: .gitignore  00init.sh  Makefile.am  configure.ac  gstlal-calibration.spec.in
gstlal-calibration/config_files/: H1DCS_AllCorrections_Cleaning.ini  H1DCS_SplitPU_AllCorrections_Cleaning.ini  H1GDS_LowLatency_AllCorrections_Cleaning.ini  H1GDS_TestLatency_AllCorrections_Cleaning.ini  gstlal_compute_strain_config_example.ini
gstlal-calibration/debian/: Makefile.am  changelog  control.in  gstlal-calibration.install  rules
gstlal-calibration/examples/: L1DCS_1175961600.npz  L1_GDS_CALCS_comparison_plots  Makefile.DCS_calibration_test  Makefile.config.example
gstlal-calibration/gnuscripts/: ax_gstlal_split_version.m4  ax_python_devel.m4  ax_python_glue.m4
gstlal-calibration/gst/: Makefile.am
gstlal-calibration/lib/: Makefile.am  gstlal-calibration.pc.in  gstlal_firtools.c  gstlal_firtools.h
gstlal-calibration/python/: FIRtools.py  Makefile.am  calibhandler.py  calibration_parts.py  multichannel_datasource.py
gstlal-calibration/share/: Makefile.am
gstlal-calibration/tests/: GDS_CALCS_comparison_plots  Makefile.GDS_calibration_test  Makefile.am  audioresample_test.py  compare_FIR_speed.py  complex_pow_test.py  deinterleave_test.py  exact_kappas_test.py  fill_silence_test.py  filters_test.py  frame.cache  lal_add_constant_test.py  lal_constantupsample_test.py  lal_demodulate_test.py  lal_dqtukey_test.py  lal_fcc_update_test.py  lal_gate_test.py  lal_insertgap_test.py  lal_interleave_test_01.py  lal_logical_undersampler_test_01.py  lal_logicalundersample_test.py  lal_matrixsolver.py  lal_multiple_srcs.py  lal_property_test.py  lal_resample_test.py  lal_smoothkappas_test.py  lal_transferfunction_test.py  line_separation_nonoise_test.py  line_separation_test.py  mat_filter.npz  py_filter.npz  pyfilter_test.py  queue_test.py  removeDC.py  remove_lines_with_witnesses_test.py  rms_test.py  single_pole_filter_test.py  test_common.py
gstlal-inspiral/: .gitignore  00init.sh  Makefile.am  configure.ac  gstlal-inspiral.spec.in
gstlal-inspiral/debian/: Makefile.am  changelog  control  control.in  gstlal-inspiral.install  rules
gstlal-inspiral/doc/: Doxyfile.in  Makefile.am
gstlal-inspiral/gnuscripts/: ax_python_glue.m4
gstlal-inspiral/gst/: Makefile.am
gstlal-inspiral/lib/: Makefile.am  gstlal-inspiral.pc.in  (+6 more)
gstlal-ugly/: .gitignore  00init.sh  HACKING  INSTALL  INSTALL.SL6  Makefile.am  TODO  configure.ac  gstlal-ugly.spec.in
lib/: Makefile.am  gstaudioadapter.c  gstaudioadapter.h  gstlal.c  gstlal.h  gstlal_peakfinder.c  gstlal_peakfinder.h  gstlal_segments.c  gstlal_segments.h  gstlal_snglinspiral.c  gstlal_snglinspiral.h  gstlal_tags.c  gstlal_tags.h  gstlalcollectpads.c
python/: Makefile.am  __init__.py  cbc_template_fir.py  cbc_template_iir.py  coherent_null_H1H2.py  far.py  gstlal_reference_psd.py  ligolw_output.py  lloidparts.py  lloidplots.py  matplotlibhelper.py  misc.py  namedtuple.py  option.py  pipeio.py  pipeparts.py  pipeutil.py  reference_psd.py  simulation.py  svd_bank.py  templates.py
tests/: Makefile.am  check_timestamps.py  firbank_test_01.py  fixtures.py  framesrc_test_01.py  gstlal_8hourly_plots_erin  iir_pipeline_test.py  itac_test_01.py  lalapps_hw_inj_query_erin  plot_test  plots_test_01.py  resample_test_01.py  test_bank.xml  test_ceil_pow_2.py  test_coinc.py  test_common.py  test_skymap.py  whiten_test_01.kst  whiten_test_01.py
(+2325 files in other folders)
